Fixed BECOME INSPIRED sizes on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -188,12 +188,17 @@ a:active { text-decoration: none; }
 }
 @media (max-width: 1000px) {
   #land-word {
-    font-size: 150px;
+    font-size: 125px;
   }
+  .become {
+    margin-bottom: -40px;
+  }
+  .inspired {
+    margin-top: -40px;  }
 }
 @media (max-width: 825px) {
   #land-word {
-    font-size: 100px;
+    font-size: 80px;
   }
   .become {
     margin-bottom: -30px;
@@ -210,14 +215,14 @@ a:active { text-decoration: none; }
   }
   .become {
     margin-bottom: -10px;
-    margin-left: -50px;
+    margin-left: -20px;
   }
   .inspired {
     margin-top: -10px;
-    margin-right: -50px;
+    margin-right: -20px;
   }
 }
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   #land-word {
     font-size: 40px;
   }
